--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "//3": "updating this file will download and update your packages",
   "name": "my-glitch-app",
   "version": "0.0.1",
-  "description": "What am I about?",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -17,7 +17,7 @@
     "node": "8.x"
   },
   "repository": {
-    "url": "https://glitch.com/edit/#!/welcome-project"
+    "url": "https://github.com/fccbubblun/timestamp"
   },
   "license": "MIT",
   "keywords": [
